--- a/day2ProgressSteps/index.html
+++ b/day2ProgressSteps/index.html
@@ -10,7 +10,7 @@
   <body>
     <!-- steps container -->
     <div class="stepContainer">
-      <div class="circle">
+      <div class="circleActive">
         <p>1</p>
       </div>
       <div class="line"></div>
@@ -31,10 +31,10 @@
       <div class="prev">
         <p>Prev</p>
       </div>
-      <div class="next">
+      <div class="next active">
         <p>Next</p>
       </div>
     </div>
-    <script src="./src/assets/javaScript.js"></script>
+    <script src="./src/assets/script.js"></script>
   </body>
 </html>
