--- a/day2ProgressSteps/index.html
+++ b/day2ProgressSteps/index.html
@@ -10,30 +10,18 @@
   <body>
     <!-- steps container -->
     <div class="stepContainer">
-      <div class="circleActive">
-        <p>1</p>
-      </div>
+      <div class="circle active">1</div>
       <div class="line"></div>
-      <div class="circle">
-        <p>2</p>
-      </div>
+      <div class="circle">2</div>
       <div class="line"></div>
-      <div class="circle">
-        <p>3</p>
-      </div>
+      <div class="circle">3</div>
       <div class="line"></div>
-      <div class="circle">
-        <p>4</p>
-      </div>
+      <div class="circle">4</div>
     </div>
     <!-- buttons container -->
-    <div class="buttonContainer">
-      <div class="prev">
-        <p>Prev</p>
-      </div>
-      <div class="next active">
-        <p>Next</p>
-      </div>
+    <div class="btnContainer">
+      <div class="btn" id="prev">Prev</div>
+      <div class="btn active" id="next">Next</div>
     </div>
     <script src="./src/assets/script.js"></script>
   </body>
